# ChangeLog for media-sound/wavsplit
# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/wavsplit/ChangeLog,v 1.6 2004/08/02 20:44:33 centic Exp $

*wavsplit-1.1.0 (02 Aug 2004)

  02 Aug 2004; Dominik Stadler <centic@gentoo.org> +wavsplit-1.1.0.ebuild:
  Add new version 1.1.0

  19 Jul 2004; Jeremy Huddleston <eradicator@gentoo.org> wavsplit-1.0.ebuild:
  -sparc -amd64

  01 Apr 2004; Jeremy Huddleston <eradicator@gentoo.org> wavsplit-1.0.ebuild:
  Stable on x86. nomirror

*wavsplit-1.0 (21 Sep 2003)

  21 Sep 2003; jje <jje@gentoo.org> wavsplit-1.0.ebuild:
  Initial revision, ~x86 masked.
  
  Submitted by: CJ Kucera <gentoo@apocalyptech.com>
