@@ -1,14 +1,14 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-MD5 e8cc42c86dd4c57aca50d925184bbea1 glurp-0.11.2.ebuild 672
-MD5 20ee236f0a03d874735fdf4654b710eb ChangeLog 599
+MD5 3ef0e0806d1016c4d3fea703966e97de glurp-0.11.2.ebuild 680
+MD5 5900902ad1a5e0d75af40227723e395b ChangeLog 685
 MD5 39ca3cc9726f35001924ecf3baea20d1 metadata.xml 219
 MD5 ac9e071393589dec888716d4cdb12d81 files/digest-glurp-0.11.2 63
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.2.6 (GNU/Linux)
 
-iD8DBQFBOMzt10xuJSrg3/sRAimUAJ4q3ZHnmxrOhosp8sU8cmXgyli2mACeL0Bp
-7SNhdi0BJcmFBQWWDzih3es=
-=p4qI
+iD8DBQFBONZ+CHk4+ZoBpvsRAuHfAJ9fUbQeFiBV6XrcBCJPs22tL7a71ACfSXRJ
+9yBUX9bicBTX11b2Z10GN9Y=
+=zHAg
 -----END PGP SIGNATURE-----
