@@ -1,6 +1,10 @@
 # ChangeLog for media-sound/wavsplit
 # Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/wavsplit/ChangeLog,v 1.6 2004/08/02 20:44:33 centic Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/wavsplit/ChangeLog,v 1.7 2004/09/03 20:34:07 eradicator Exp $
+
+  03 Sep 2004; Jeremy Huddleston <eradicator@gentoo.org>
+  wavsplit-1.1.0.ebuild:
+  Stable amd64, x86.
 
 *wavsplit-1.1.0 (02 Aug 2004)
 
